{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 105,
  "lineage": "4a9e367d-5849-c12a-f26d-6ab215e97689",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-mgmt-traffic-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T14:22:56.036-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon-homework/global/firewalls/allow-mgmt-traffic-tf",
            "log_config": [],
            "name": "allow-mgmt-traffic-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/firewalls/allow-mgmt-traffic-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vpc-network-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T16:01:48.306-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon-homework/global/firewalls/allow-web-traffic",
            "log_config": [],
            "name": "allow-web-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/firewalls/allow-web-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "vpc-network-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-allow-egress-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-05-14T14:22:55.966-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon-homework/global/firewalls/vpc-allow-egress-tf",
            "log_config": [],
            "name": "vpc-allow-egress-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/firewalls/vpc-allow-egress-tf",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vpc-network-egress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-allow-ingress-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T14:22:56.011-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon-homework/global/firewalls/vpc-allow-ingress-tf",
            "log_config": [],
            "name": "vpc-allow-ingress-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/firewalls/vpc-allow-ingress-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vpc-ingress-tp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-allow-mgmt-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T14:22:55.929-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/armageddon-homework/global/firewalls/pc-allow-mgmt-tf",
            "log_config": [],
            "name": "pc-allow-mgmt-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/firewalls/pc-allow-mgmt-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vpc-network-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vpc-vm-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "vpc-vm-tf",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/zones/us-central1-a/disks/vpc-vm-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/armageddon-homework/zones/us-central1-a/instances/vpc-vm-tf",
            "instance_id": "7669351334942758217",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/instance/ne [...]
            },
            "metadata_fingerprint": "RGxrfSO9BdE=",
            "name": "vpc-vm-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.46.101",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
                "network_ip": "10.187.13.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/regions/us-central1/subnetworks/public-subnet-tf",
                "subnetwork_project": "armageddon-homework"
              }
            ],
            "project": "armageddon-homework",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/zones/us-central1-a/instances/vpc-vm-tf",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc-tf",
            "google_compute_subnetwork.public-subnet-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/armageddon-homework/global/networks/vpc-tf",
            "mtu": 0,
            "name": "vpc-tf",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3576643703997884619",
            "project": "armageddon-homework",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpc-network-route-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/armageddon-homework/global/routes/vpc-network-route-tf",
            "name": "vpc-network-route-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "armageddon-homework",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/routes/vpc-network-route-tf",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc-network-router-us-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T14:22:55.920-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/armageddon-homework/regions/us-central1/routers/vpc-network-router-us-tf",
            "name": "vpc-network-router-us-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "project": "armageddon-homework",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/regions/us-central1/routers/vpc-network-router-us-tf"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T14:22:56.051-07:00",
            "gateway_address": "10.187.13.1",
            "id": "projects/armageddon-homework/regions/us-central1/subnetworks/public-subnet-tf",
            "ip_cidr_range": "10.187.13.0/24",
            "name": "public-subnet-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/global/networks/vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "armageddon-homework",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/armageddon-homework/regions/us-central1/subnetworks/public-subnet-tf",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    }
  ]
}